images align, letter of credit doc, bugs fixes

--- a/css/style.css
+++ b/css/style.css
@@ -6117,7 +6117,7 @@ ul.footer-nav-menu {
 }
 
 .animation-img img {
-  width: 60%;
+  width: 50%;
 }
 
 @media(max-width:1024px) {
@@ -6858,3 +6858,9 @@ ul.footer-nav-menu {
 }
 }
 /* =========Mission Responsive css End=========== */
+
+@media (max-width:1440px) {
+  .card_height{
+       height:100%;
+  }
+}
